--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Yearbook 2025</title>
+    <title>Digital Blueprint 2025</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -195,7 +195,7 @@
                 Class of 2026
             </h1>
             <p class="text-xl md:text-2xl text-gray-300 mb-4 font-light">
-                Digital Yearbook
+                Digital Blueprint
             </p>
             <div class="flex items-center justify-center gap-2 text-purple-400">
                 <i class="fas fa-heart heartbeat"></i>
@@ -361,4 +361,5 @@
         renderCards(students);
     </script>
 </body>
+
 </html>
